force-app/main/default/objects/Asset/fields/ABHI_Policy_Id__c.field-meta.xml
<CustomField>
    <fullName>ABHI_Policy_Id__c</fullName>
    <description>Used to store policy id</description>
    <externalId>true</externalId>
    <label>Policy Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>