force-app/main/default/objects/Asset/fields/ABHI_PolicyNo_Proposal__c.field-meta.xml
<CustomField>
    <fullName>ABHI_PolicyNo_Proposal__c</fullName>
    <formula>LAN__c ==  SerialNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABHI PolicyNo=Proposal</label>
    <type>Checkbox</type>
</CustomField>