force-app/main/default/objects/Asset/fields/Account_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Maturity_Date__c</fullName>
    <label>Account Maturity Date</label>
    <type>Date</type>
</CustomField>