force-app/main/default/objects/Asset/fields/Account_no__c.field-meta.xml
<CustomField>
    <fullName>Account_no__c</fullName>
    <label>Account no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>