force-app/main/default/objects/Asset/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>Account Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>