force-app/main/default/objects/Asset/fields/Account_Type_For_PMS__c.field-meta.xml
<CustomField>
    <fullName>Account_Type_For_PMS__c</fullName>
    <label>Account Type (For PMS)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>