force-app/main/default/objects/Asset/fields/ActiveHealthVersion__c.field-meta.xml
<CustomField>
    <fullName>ActiveHealthVersion__c</fullName>
    <description>ABHI</description>
    <label>Active Health Version</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>