force-app/main/default/objects/Asset/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>This field is used to store Policy related Address in ABSLI.</description>
    <label>Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>