force-app/main/default/objects/Asset/fields/Advisor__c.field-meta.xml
<CustomField>
    <fullName>Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field in used as part of ABSLI to map Advisor Account with Policy Record.</description>
    <label>Servicing Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets (Advisor)</relationshipLabel>
    <relationshipName>Assets1</relationshipName>
    <type>Lookup</type>
</CustomField>