force-app/main/default/objects/Asset/fields/Agentbranch__c.field-meta.xml
<CustomField>
    <fullName>Agentbranch__c</fullName>
    <description>This field will be used in Wellness.</description>
    <label>Agent Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>