force-app/main/default/objects/Asset/fields/AgentCode__c.field-meta.xml
<CustomField>
    <fullName>AgentCode__c</fullName>
    <label>Agent Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>