force-app/main/default/objects/Asset/fields/AgentStatus__c.field-meta.xml
<CustomField>
    <fullName>AgentStatus__c</fullName>
    <description>ABHIL</description>
    <label>Agent Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>