force-app/main/default/objects/Asset/fields/Aggrement_Date__c.field-meta.xml
<CustomField>
    <fullName>Aggrement_Date__c</fullName>
    <label>Agreement Date</label>
    <type>Date</type>
</CustomField>