force-app/main/default/objects/Asset/fields/Amount_outstanding_in_DOP_ULIP__c.field-meta.xml
<CustomField>
    <fullName>Amount_outstanding_in_DOP_ULIP__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>Amount outstanding in DOP period (ULIP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>