force-app/main/default/objects/Asset/fields/Annuity_Mode__c.field-meta.xml
<CustomField>
    <fullName>Annuity_Mode__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>Annuity Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>