force-app/main/default/objects/Asset/fields/ApplicationDate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationDate__c</fullName>
    <description>ABHI</description>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>