force-app/main/default/objects/Asset/fields/ApplicationStatus__c.field-meta.xml
<CustomField>
    <fullName>ApplicationStatus__c</fullName>
    <label>Application Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>