force-app/main/default/objects/Asset/fields/Approved_Limit__c.field-meta.xml
<CustomField>
    <fullName>Approved_Limit__c</fullName>
    <label>Approved Limit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>