force-app/main/default/objects/Asset/fields/ARN_Number__c.field-meta.xml
<CustomField>
    <fullName>ARN_Number__c</fullName>
    <label>ARN Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>