force-app/main/default/objects/Asset/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <label>ARR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>