force-app/main/default/objects/Asset/fields/ARU__c.field-meta.xml
<CustomField>
    <fullName>ARU__c</fullName>
    <description>ABHI</description>
    <label>ARU</label>
    <length>100</length>
    <type>Text</type>
</CustomField>