force-app/main/default/objects/Asset/fields/ASF_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>ASF_Card_Number__c</fullName>
    <description>The formula is to populate the card number based on Type</description>
    <formula>if(TEXT(ASF_Type__c)== &apos;CreditCard&apos;, ASF_Credit_Card_Last_4_Digit__c ,(if(TEXT(ASF_Type__c)== &apos;DebitCard&apos;, ASF_Debit_Card_No__c  ,&apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Card Number</label>
    <type>Text</type>
</CustomField>