force-app/main/default/objects/Asset/fields/ASF_Card_or_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>ASF_Card_or_Account_Number__c</fullName>
    <description>Used in Case Snapshot Financial Account/Card Number field pre-population</description>
    <formula>if( ISBLANK( ASF_Card_Number__c ) ,Name, ASF_Card_Number__c)</formula>
    <label>Card or Account Number</label>
    <type>Text</type>
</CustomField>