force-app/main/default/objects/Asset/fields/ASF_Credit_Card_Last_4_Digit__c.field-meta.xml
<CustomField>
    <fullName>ASF_Credit_Card_Last_4_Digit__c</fullName>
    <label>Credit Card Last 4 Digit</label>
    <length>10</length>
    <type>Text</type>
</CustomField>