force-app/main/default/objects/Asset/fields/ASF_Debit_Card_No__c.field-meta.xml
<CustomField>
    <fullName>ASF_Debit_Card_No__c</fullName>
    <label>Debit Card No</label>
    <length>40</length>
    <type>Text</type>
</CustomField>