force-app/main/default/objects/Asset/fields/ASF_Type__c.field-meta.xml
<CustomField>
    <fullName>ASF_Type__c</fullName>
    <description>USED IN CS360 TO GROUP THE PRODUCTS BASED ON DIFFERENT &apos;TYPE&apos;.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CreditCard</fullName>
            </value>
            <value>
                <fullName>DebitCard</fullName>
            </value>
            <value>
                <fullName>Loans</fullName>
            </value>
            <value>
                <fullName>Deposits</fullName>
            </value>
            <value>
                <fullName>CurrentAccount</fullName>
            </value>
            <value>
                <fullName>SavingsAccount</fullName>
            </value>
            <value>
                <fullName>OD</fullName>
            </value>
            <value>
                <fullName>WM Banking</fullName>
            </value>
            <value>
                <fullName>TL</fullName>
            </value>
            <value>
                <fullName>WC</fullName>
            </value>
            <value>
                <fullName>CashCredit</fullName>
            </value>
            <value>
                <fullName>Corporate Loans</fullName>
            </value>
            <value>
                <fullName>ForexCard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>