force-app/main/default/objects/Asset/fields/Assured_Payout__c.field-meta.xml
<CustomField>
    <fullName>Assured_Payout__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>Assured Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>