force-app/main/default/objects/Asset/fields/AutoDebitFlag__c.field-meta.xml
<CustomField>
    <fullName>AutoDebitFlag__c</fullName>
    <description>ABHIL</description>
    <label>Auto Debit Flag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>