force-app/main/default/objects/Asset/fields/AutoDebitRegistrationStatus__c.field-meta.xml
<CustomField>
    <fullName>AutoDebitRegistrationStatus__c</fullName>
    <description>ABHIL</description>
    <label>Auto Debit Registration Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>