force-app/main/default/objects/Asset/fields/AV_Limit_Disb__c.field-meta.xml
<CustomField>
    <fullName>AV_Limit_Disb__c</fullName>
    <label>AV Limit Disb</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>