force-app/main/default/objects/Asset/fields/Bachat_Additions__c.field-meta.xml
<CustomField>
    <fullName>Bachat_Additions__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>Bachat Additions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>