force-app/main/default/objects/Asset/fields/Balance_Tenure__c.field-meta.xml
<CustomField>
    <fullName>Balance_Tenure__c</fullName>
    <label>Balance Tenure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>