force-app/main/default/objects/Asset/fields/BalanceHR__c.field-meta.xml
<CustomField>
    <fullName>BalanceHR__c</fullName>
    <label>Balance HR</label>
    <length>100</length>
    <type>Text</type>
</CustomField>