force-app/main/default/objects/Asset/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>Bank Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>