force-app/main/default/objects/Asset/fields/BasicPremium__c.field-meta.xml
<CustomField>
    <fullName>BasicPremium__c</fullName>
    <description>ABHIL</description>
    <label>Basic Premium</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>