force-app/main/default/objects/Asset/fields/Batch_Num__c.field-meta.xml
<CustomField>
    <fullName>Batch_Num__c</fullName>
    <label>Batch Num</label>
    <length>255</length>
    <type>Text</type>
</CustomField>