force-app/main/default/objects/Asset/fields/Beneficiary_Details__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Details__c</fullName>
    <label>Beneficiary Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>