force-app/main/default/objects/Asset/fields/Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Code__c</fullName>
    <label>Branch Code</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>