force-app/main/default/objects/Asset/fields/Branch_Code_Calc__c.field-meta.xml
<CustomField>
    <fullName>Branch_Code_Calc__c</fullName>
    <formula>Branch__r.Branch_Code__c</formula>
    <label>Branch Code</label>
    <type>Text</type>
</CustomField>