force-app/main/default/objects/Asset/fields/branch_name__c.field-meta.xml
<CustomField>
    <fullName>branch_name__c</fullName>
    <label>branch name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>