force-app/main/default/objects/Asset/fields/BranchText__c.field-meta.xml
<CustomField>
    <fullName>BranchText__c</fullName>
    <description>Used in Wellness</description>
    <label>Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>