force-app/main/default/objects/Asset/fields/Bureau_Enquiry_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Bureau_Enquiry_Date_1__c</fullName>
    <label>Bureau Enquiry Date 1</label>
    <type>Date</type>
</CustomField>