force-app/main/default/objects/Asset/fields/Bureau_Enquiry_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Bureau_Enquiry_Date_2__c</fullName>
    <label>Bureau Enquiry Date 2</label>
    <type>Date</type>
</CustomField>