force-app/main/default/objects/Asset/fields/Bureau_Enquiry_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Bureau_Enquiry_Date_3__c</fullName>
    <label>Bureau Enquiry Date 3</label>
    <type>Date</type>
</CustomField>