force-app/main/default/objects/Asset/fields/Bureau_Enquiry_Type_1__c.field-meta.xml
<CustomField>
    <fullName>Bureau_Enquiry_Type_1__c</fullName>
    <label>Bureau Enquiry Type 1</label>
    <type>TextArea</type>
</CustomField>