force-app/main/default/objects/Asset/fields/Bureau_Enquiry_Type_2__c.field-meta.xml
<CustomField>
    <fullName>Bureau_Enquiry_Type_2__c</fullName>
    <label>Bureau Enquiry Type 2</label>
    <type>TextArea</type>
</CustomField>