force-app/main/default/objects/Asset/fields/Bureau_Enquiry_Type_3__c.field-meta.xml
<CustomField>
    <fullName>Bureau_Enquiry_Type_3__c</fullName>
    <label>Bureau Enquiry Type 3</label>
    <type>TextArea</type>
</CustomField>