force-app/main/default/objects/Asset/fields/BusinessType__c.field-meta.xml
<CustomField>
    <fullName>BusinessType__c</fullName>
    <description>ABHIL</description>
    <label>Business Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>