force-app/main/default/objects/Asset/fields/Calculator__c.field-meta.xml
<CustomField>
    <fullName>Calculator__c</fullName>
    <formula>HYPERLINK(&quot;https://www.adityabirlacapital.com/healthinsurance/#!/renew-policy&quot;, &quot;Calculator&quot;)</formula>
    <label>Calculator</label>
    <type>Text</type>
</CustomField>