force-app/main/default/objects/Asset/fields/Capital_Contributed__c.field-meta.xml
<CustomField>
    <fullName>Capital_Contributed__c</fullName>
    <label>Capital Contributed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>