force-app/main/default/objects/Asset/fields/Capital_Returned__c.field-meta.xml
<CustomField>
    <fullName>Capital_Returned__c</fullName>
    <label>Capital Returned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>