force-app/main/default/objects/Asset/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>