force-app/main/default/objects/Asset/fields/Cheque_Bounce__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Bounce__c</fullName>
    <label>Cheque Bounce</label>
    <length>255</length>
    <type>Text</type>
</CustomField>