force-app/main/default/objects/Asset/fields/Client_Code__c.field-meta.xml
<CustomField>
    <fullName>Client_Code__c</fullName>
    <formula>Account.Client_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Code</label>
    <type>Text</type>
</CustomField>