force-app/main/default/objects/Asset/fields/COILink__c.field-meta.xml
<CustomField>
    <fullName>COILink__c</fullName>
    <description>ABHIL</description>
    <label>COI Link</label>
    <type>Url</type>
</CustomField>