force-app/main/default/objects/Asset/fields/CombiPolicyNo__c.field-meta.xml
<CustomField>
    <fullName>CombiPolicyNo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Combi Policy No</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Assets (Combi Policy No)</relationshipLabel>
    <relationshipName>CombiPolicy</relationshipName>
    <type>Lookup</type>
</CustomField>