force-app/main/default/objects/Asset/fields/CombiPolicyType__c.field-meta.xml
<CustomField>
    <fullName>CombiPolicyType__c</fullName>
    <description>ABHIL</description>
    <label>Combi Policy Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>