force-app/main/default/objects/Asset/fields/CombiProposalNumber__c.field-meta.xml
<CustomField>
    <fullName>CombiProposalNumber__c</fullName>
    <description>ABHIL</description>
    <label>Combi Proposal Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>