force-app/main/default/objects/Asset/fields/CombiReferenceNo__c.field-meta.xml
<CustomField>
    <fullName>CombiReferenceNo__c</fullName>
    <externalId>true</externalId>
    <label>CombiReferenceNo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>