force-app/main/default/objects/Asset/fields/Commitment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Amount__c</fullName>
    <label>Commitment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>