force-app/main/default/objects/Asset/fields/Common_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Common_Account_Number__c</fullName>
    <label>Common Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>