force-app/main/default/objects/Asset/fields/Console_Branch__c.field-meta.xml
<CustomField>
    <fullName>Console_Branch__c</fullName>
    <label>Console Branch</label>
    <length>100</length>
    <type>Text</type>
</CustomField>