force-app/main/default/objects/Asset/fields/Console_Zone__c.field-meta.xml
<CustomField>
    <fullName>Console_Zone__c</fullName>
    <label>Console Zone</label>
    <length>200</length>
    <type>Text</type>
</CustomField>