force-app/main/default/objects/Asset/fields/ConsumedHR__c.field-meta.xml
<CustomField>
    <fullName>ConsumedHR__c</fullName>
    <description>ABHI</description>
    <label>ConsumedHR</label>
    <length>100</length>
    <type>Text</type>
</CustomField>