force-app/main/default/objects/Asset/fields/ContactPersonOfEmployer__c.field-meta.xml
<CustomField>
    <fullName>ContactPersonOfEmployer__c</fullName>
    <description>ABHI</description>
    <label>Contact Person Of Employer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>