force-app/main/default/objects/Asset/fields/Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_Id__c</fullName>
    <formula>LAN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Id</label>
    <type>Text</type>
</CustomField>