force-app/main/default/objects/Asset/fields/ContractGroup__c.field-meta.xml
<CustomField>
    <fullName>ContractGroup__c</fullName>
    <label>Contract Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>