force-app/main/default/objects/Asset/fields/ContractId__c.field-meta.xml
<CustomField>
    <fullName>ContractId__c</fullName>
    <description>This is a foreign key to map contract Id from wellness core.</description>
    <externalId>true</externalId>
    <label>Contract Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>