force-app/main/default/objects/Asset/fields/ContractIssueDate__c.field-meta.xml
<CustomField>
    <fullName>ContractIssueDate__c</fullName>
    <description>Used in Wellness</description>
    <label>Contract issue date</label>
    <type>Date</type>
</CustomField>