force-app/main/default/objects/Asset/fields/ContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>ContractStartDate__c</fullName>
    <label>Contract start Date</label>
    <type>Date</type>
</CustomField>