force-app/main/default/objects/Asset/fields/Converted_to_IR__c.field-meta.xml
<CustomField>
    <fullName>Converted_to_IR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ABSLI : 21 May 2024 - Created for ABSLI Asset Data Model requirement etc</description>
    <label>Converted to IR</label>
    <type>Checkbox</type>
</CustomField>