force-app/main/default/objects/Asset/fields/Copay_Applicability__c.field-meta.xml
<CustomField>
    <fullName>Copay_Applicability__c</fullName>
    <label>Copay Applicability</label>
    <length>100</length>
    <type>Text</type>
</CustomField>