force-app/main/default/objects/Asset/fields/CountOfLives__c.field-meta.xml
<CustomField>
    <fullName>CountOfLives__c</fullName>
    <description>ABHI</description>
    <label>No. of Insured Members</label>
    <length>100</length>
    <type>Text</type>
</CustomField>