force-app/main/default/objects/Asset/fields/Cover_Type__c.field-meta.xml
<CustomField>
    <fullName>Cover_Type__c</fullName>
    <label>Cover Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>