force-app/main/default/objects/Asset/fields/Coverage_No__c.field-meta.xml
<CustomField>
    <fullName>Coverage_No__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>CoverageNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>