force-app/main/default/objects/Asset/fields/Credit_Authority__c.field-meta.xml
<CustomField>
    <fullName>Credit_Authority__c</fullName>
    <label>Credit Authority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>