force-app/main/default/objects/Asset/fields/Credit_Eligibility_Program__c.field-meta.xml
<CustomField>
    <fullName>Credit_Eligibility_Program__c</fullName>
    <label>Credit Eligibility Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>