force-app/main/default/objects/Asset/fields/Cross_Sale_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Cross_Sale_Applicable__c</fullName>
    <label>Is cross sell</label>
    <length>10</length>
    <type>Text</type>
</CustomField>