force-app/main/default/objects/Asset/fields/CrossSellNumber__c.field-meta.xml
<CustomField>
    <fullName>CrossSellNumber__c</fullName>
    <description>ABHIL</description>
    <label>Cross Sell Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>