force-app/main/default/objects/Asset/fields/CrossSellPolicyNumbers__c.field-meta.xml
<CustomField>
    <fullName>CrossSellPolicyNumbers__c</fullName>
    <description>ABHI</description>
    <label>Cross Sell Policy Numbers</label>
    <length>100</length>
    <type>Text</type>
</CustomField>