force-app/main/default/objects/Asset/fields/CrossSellProductName__c.field-meta.xml
<CustomField>
    <fullName>CrossSellProductName__c</fullName>
    <description>ABHI</description>
    <label>Cross Sell Product Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>