force-app/main/default/objects/Asset/fields/CrossSellReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>CrossSellReferenceNumber__c</fullName>
    <description>ABHI</description>
    <label>Combi reference No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>