force-app/main/default/objects/Asset/fields/Current_Cibil_Score__c.field-meta.xml
<CustomField>
    <fullName>Current_Cibil_Score__c</fullName>
    <label>Current Cibil Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>