force-app/main/default/objects/Asset/fields/Current_Interest_rate__c.field-meta.xml
<CustomField>
    <fullName>Current_Interest_rate__c</fullName>
    <label>Current Interest rate</label>
    <type>TextArea</type>
</CustomField>