force-app/main/default/objects/Asset/fields/Current_POS__c.field-meta.xml
<CustomField>
    <fullName>Current_POS__c</fullName>
    <label>Current POS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>