force-app/main/default/objects/Asset/fields/Current_Rate_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Current_Rate_of_Interest__c</fullName>
    <label>Current Rate of Interest</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>