force-app/main/default/objects/Asset/fields/Current_ROI__c.field-meta.xml
<CustomField>
    <fullName>Current_ROI__c</fullName>
    <label>Current ROI</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>