force-app/main/default/objects/Asset/fields/DA_Transaction__c.field-meta.xml
<CustomField>
    <fullName>DA_Transaction__c</fullName>
    <label>DA Transaction</label>
    <length>3</length>
    <type>Text</type>
</CustomField>