force-app/main/default/objects/Asset/fields/Date_of_Admission__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Admission__c</fullName>
    <label>Date of Admission</label>
    <type>DateTime</type>
</CustomField>