force-app/main/default/objects/Asset/fields/Date_of_Change__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Change__c</fullName>
    <label>Date of Change</label>
    <type>Date</type>
</CustomField>