force-app/main/default/objects/Asset/fields/Date_of_Conversion_to_IR__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Conversion_to_IR__c</fullName>
    <description>ABSLI : 21 May 2024 - Created for ABSLI Asset Data Model requirement etc</description>
    <label>Date of Conversion to IR</label>
    <type>Date</type>
</CustomField>