force-app/main/default/objects/Asset/fields/Deactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>Deactivation_Date__c</fullName>
    <label>Deactivation Date</label>
    <type>Date</type>
</CustomField>