force-app/main/default/objects/Asset/fields/Deactivation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Deactivation_Reason__c</fullName>
    <label>Deactivation Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>