force-app/main/default/objects/Asset/fields/Deal_No__c.field-meta.xml
<CustomField>
    <fullName>Deal_No__c</fullName>
    <label>Deal No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>