force-app/main/default/objects/Asset/fields/DebitFrequency__c.field-meta.xml
<CustomField>
    <fullName>DebitFrequency__c</fullName>
    <description>ABHIL</description>
    <label>Debit Frequency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>