force-app/main/default/objects/Asset/fields/DebitReason__c.field-meta.xml
<CustomField>
    <fullName>DebitReason__c</fullName>
    <description>ABHI</description>
    <label>Debit Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>