force-app/main/default/objects/Asset/fields/Decile__c.field-meta.xml
<CustomField>
    <fullName>Decile__c</fullName>
    <label>Decile</label>
    <type>TextArea</type>
</CustomField>